--- a/README.adoc
+++ b/README.adoc
@@ -6,11 +6,11 @@ This project allows data transfer to a semi-trusted party, where the need for da
 
 == Concept
 
-A client can request a seal from the SIS. A seal is a data set and consists of a symmetric key for encryption/decryption and some metadata to allow the usage and relevation tracking of this key.
+A client can request a seal from the SIS. A seal is a data set and consists of a symmetric key for encryption/decryption and some metadata to allow the usage and revelation tracking of this key.
 
 IMPORTANT: There are no personal identifiable information (PII) such as IP addresses or user identifier stored along the seal. This is a core principle of SIS and ensures a high level of privacy.
 
-A seal could look like the following
+A seal could look like the following:
 
 [source, json]
 ----
@@ -18,8 +18,8 @@ A seal could look like the following
     "id": "e2d96329-76cc-42ed-a49a-82ff658b4720",
     "key": "79463cc4-9e8d-4c49-bc8f-67d64c39e408",
     "salt": "5e305c25-5351-4bbd-857d-cc32adc98f7d",
-    "relevation_token": "1b4a78be-be7b-4677-9169-1df69384d08b",
-    "relevation_token_max_use": 1,
+    "revelation_token": "1b4a78be-be7b-4677-9169-1df69384d08b",
+    "revelation_token_max_use": 1,
     "ownership_token": "f6f3a406-c0ee-4a1b-8f28-1f4fa5148955",
     "not_before": 1650983147,
     "expires_at": 1682519147
@@ -33,7 +33,7 @@ The client can then encrypt arbitrary data with the respective secret and store 
 - We recommend to salt the data before encryption, so SIS provides a `salt` value along with the actual key. This reduces the risk of dictionary table attacks, especially if the plain text consists of single words.
 - To ensure that only the original requestor is able to retrieve the status of a seal (e. g. if it has been revealed to somebody else), we attach a `ownership_token` to the seal to prove the identity of the owner.
 - The SIS is never aware of the data to be encrypted/decrypted. Both plain text and cipher text stay on client side at all times.
-- The seal retrieval is only possible with a `relevation_token` bound to the seal. This allows prevention of brute force attacks to retrieve seals.
+- The seal retrieval is only possible with a `revelation_token` bound to the seal. This allows prevention of brute force attacks to retrieve seals.
 
 == Limitations
 - The SIS approach does not guarantee total confidentiality as the data recipient can always decrypt the data without approval. SIS only asserts that it cannot be done unrecognized.
@@ -43,12 +43,12 @@ The client can then encrypt arbitrary data with the respective secret and store 
 
 * MUST provide an publicly available endpoint to generate seals
 * MUST provide an protected (by `ownership_token`) endpoint to check the seal status and revoke the secret
-* MUST provide an protected (by `relevation_token`) endpoint to retrieve the `secret` and `salt`
-* MUST disallow secret relevation before the `not_before` date and after the `expires_at` date
-* MUST generate `id`, `key`, `salt`, `relevation_token` and `ownership_token` in an secure and unpredictable manner
+* MUST provide an protected (by `revelation_token`) endpoint to retrieve the `secret` and `salt`
+* MUST disallow secret revelation before the `not_before` date and after the `expires_at` date
+* MUST generate `id`, `key`, `salt`, `revelation_token` and `ownership_token` in an secure and unpredictable manner
 * MUST allow time restrictions (`not_before` and `expires_at`) when creating a seal
 * MUST store the seals securely and durably.
-* MUST store an audit log with the most important seal lifecycle events (such as creation, relevation, revocation)
+* MUST store an audit log with the most important seal lifecycle events (such as creation, revelation, revocation)
 * MUST NOT store PII or other metadata which allow the identification of any involved party
 * SHOULD protect all endpoints against DoS attacks.
 
@@ -57,11 +57,11 @@ The client can then encrypt arbitrary data with the respective secret and store 
 When encrypting data before transferring to a recipient, the client
 
 * MUST use a secure cipher for encryption
-* MUST share the `id` and `relevation_token` with the recipient
+* MUST share the `id` and `revelation_token` with the recipient
 * MUST NOT share all other seal data (`key`, `salt`, `ownership_token`) with the recipient
 * MUST NOT share any payload with the SIS server
 * SHOULD do all encryption locally in the user agent or native app without server interaction
-* SHOULD at least persist the `id` and `ownership_token` of the used seals in order to track the relevation status and revoke seals
+* SHOULD at least persist the `id` and `ownership_token` of the used seals in order to track the revelation status and revoke seals
 * SHOULD add the provided salt to the plaintext before encryption to avoid dictionary attacks
 
 == Example use cases
